app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  selector:
    app: todo-list-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
