service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-app-service
spec:
  selector:
    app: todo-list-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  type: ClusterIP
