ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-list-app-ingress
spec:
  rules:
  - host: your-app-name.com  # Замени го ова со својот домен или користи локално
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-list-app
            port:
              number: 3000
